# policy-as-code

./: .gitignore  CHANGELOG.md  COMPLIANCE_SUMMARY.md  GETTING_STARTED.md  Makefile  README.md  project-outline-requirement.md  pyproject.toml
.github/workflows/: policy-validation.yml  scheduled-report.yml  terraform-scan.yml
docs/architecture/: documentation-structure.md
docs/guides/: compliance-reporting.md  enforcement-strategies.md  getting-started.md  quickstart.md
docs/reference/: compliance-mapping.md  compliance-summary.md
examples/aws/compliant/: main.tf  tfplan  variables.tf
examples/aws/non-compliant/: main.tf  tfplan
policies/aws/compliance/: ffiec.rego  glba.rego  pci-dss.rego  sox.rego
policies/aws/cost/: instance-types.rego  resource-limits.rego
policies/aws/security/: ec2-security-groups.rego  iam-mfa-enforcement.rego  kms-encryption.rego  s3-encryption.rego  s3-public-access.rego
policies/aws/tagging/: required-tags.rego  tag-format.rego
policies/azure/cost/: vm-sizes.rego
policies/azure/security/: key-vault.rego  network-security.rego  storage-encryption.rego
policies/azure/tagging/: required-tags.rego
reporting/: __init__.py  cli.py  compliance_report.py
reporting/generators/: __init__.py  csv_report.py  html_report.py  json_report.py
reporting/templates/: policy-report.html
reports/: .gitkeep  README.md
scripts/: check-terraform.sh  extract-violations.py  setup.sh  validate-policies.sh
tests/aws/compliance/: glba_test.rego
tests/aws/security/: s3-encryption_test.rego  s3-public-access_test.rego
(+3 files in other folders)
