[project]
name = "policy-as-code"
version = "0.1.0"
description = "Multi-cloud Policy-as-Code framework using OPA/Rego"
authors = [
    {name = "DevSecOps Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.3",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
